--- a/Sweet.html/index.html
+++ b/Sweet.html/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="top">
+    <section class="go">
         <div class="half">
             <h1>Welcome to</h1>
             <h1><span class="red">Sanam </span> World</h1>
@@ -27,10 +27,37 @@
                 nanu.She looks like a monkey.She nonstop jumping in bed.</p><a class="button" target="_blank"
                 href="https://www.facebook.com/samia.sanam.169">Facebook</a>
         </div>
+
+        <div class="half">
+            <img src="sanam.png" alt="sanam photo">
+        </div>
+
+    </section>
+    <section class="bye">
+        <div class="hi">
+            <img src="sanari..png" alt="sanari photo">
+
+        </div>
+        <div class="hi">
+            <h1>
+                <span class="you">Sanari</span> World
+            </h1>
+            <h2 class="oi">
+                Sana paias
+            </h2>
+            <p class="no">
+                Her name is Sana. She is overactive girl.She know every thing.Her age 4.She like chocolate.She is so
+                smart.
+                she say that she is the beatifull girl in the world and she is so cute. i dont know😒
+            </p> <a class="see" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100008439901382">Facebook</a>
+
         </div>
 
 
-        <div class="half"><img src="sanam.png" alt="sanam photo">
+
+
+
 
     </section>
 
