--- a/Sweet.html/index.html
+++ b/Sweet.html/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="go">
+    <section class="go flexble-containar">
         <div class="half">
             <h1>Welcome to</h1>
             <h1><span class="red">Sanam </span> World</h1>
@@ -33,7 +33,7 @@
         </div>
 
     </section>
-    <section class="bye">
+    <section class="bye flexble-containar">
         <div class="hi">
             <img src="sanari..png" alt="sanari photo">
 
@@ -51,15 +51,37 @@
                 she say that she is the beatifull girl in the world and she is so cute. i dont know😒
             </p> <a class="see" target="_blank"
                 href="https://www.facebook.com/profile.php?id=100008439901382">Facebook</a>
+        </div>
+    </section>
+    <h1>Experiences</h1>
+    <section class="ex">
 
+        <div class="flexble-containar">
+            <div class="hal">
+                <h1>Web Developer</h1>
+                <h2>2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+
+            </div>
+        </div>
+        <div class="hal">
+            <h1>Baby Developer</h1>
+            <h2>2020-2021 | Programming Hero</h2>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website
+                and
+                showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </p>
+        </div>
         </div>
 
 
-
-
-
-
     </section>
+
 
 
 
